Fix follow button in alignment

--- a/facebook_card_UI.css
+++ b/facebook_card_UI.css
@@ -6,7 +6,8 @@
       }
 
       .row{
-        display:block;
+        display:flex;
+        align-items:center;
         margin-bottom:20px;
       }
 
@@ -20,6 +21,7 @@
         display:inline-block;
         vertical-align:top;
         margin-top:5px;
+        width:180px;
       }
 
       .button{
@@ -29,16 +31,12 @@
       button{
         color:white;
         margin-left:30px;
-        background-color:rgb(48, 129, 214);
+        background-color:rgb(48,129,214);
         border:none;
         border-radius:4px;
-        padding-left:8px;
-        padding-right:8px;
-        padding-top:6px;
-        padding-bottom:6px;
+        padding:6px 12px;
         cursor:pointer;
-        margin-top:20px;
-      }
+  }
       
 
       .profile-picture{
